# aiss-standard

./: .gitattributes  .gitignore  CHANGELOG.md  CONFORMANCE.md  CONTRIBUTING.md  LICENSE  README.md  README_aiss.md  SPEC.md  conftest.py  index.html  legal.html  llms.txt  pyproject.toml  robots.txt  sitemap.xml  smoke_test.py
.github/workflows/: ci.yml  publish_aiss.yml
aiss/: __init__.py  agent_context.py  agent_identity.py  agent_registry.py  aiss__init__.py  aiss_exports.py  aiss_memory.py  authority.py  bridge_protocol.py  history.py  identity.py  index.py  logger.py  stamp_aiss2.py  telemetry.py
docs/: API.md
examples/: event-chain.json  event-simple.json
tests/: test_agent_identity.py  test_vectors.py
vigil/: vigil__init__.py  vigil_server.py  vigil_v4_final.html
